Return settings back (oops)

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,12 +13,5 @@
     "editor.codeActionsOnSave": {
         "source.fixAll.eslint": "explicit"
     },
-    "eslint.validate": [
-        "javascript",
-        "vue",
-        "html"
-    ],
-    "[javascript]": {
-        "editor.defaultFormatter": "vscode.typescript-language-features"
-    }
+    "eslint.validate": ["javascript", "vue", "html"]
 }
