--- a/.github/workflows/github_actions.yml
+++ b/.github/workflows/github_actions.yml
@@ -243,6 +243,8 @@ jobs:
                   path: build/html
 
             - name: Build Electron-html
+              env:
+                  SENTRY_AUTH_TOKEN: ${{ secrets.SentryAuthToken }}
               run: npm run prod-linux
             - name: Download Electron x64 dotnet artifacts
               uses: actions/download-artifact@v5
